--- a/index.html
+++ b/index.html
@@ -3,5 +3,17 @@
   <head>
     <title> Warner Bros Website</title>
   </head>
-  
+  <body>
+    <header>
+      <figure>
+        <img.src="img/Warnerbros%204.png">
+      </figure>
+      <div class="bx bx-menu" id-"menu></div>
+      
+      <nav>
+      <ul>
+      </ul>  
+      </nav>
+    </header>
+  </body>
 </html>
