--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
     <title> Warner Bros Website</title>
   </head>
   <body>
+       <figure>
+      <img alt="logo" class="auto-style1" height="131" src="logo%20warner.jpeg" width="177" aglin="left"/>   
+     </figure>
+
+      <ul style="width: 162px">
+        <li><a href="index.html">Home</a></li>
+        <li>&nbsp;<a href="Movies.html">Movies</a></li>
+        <li><a href="TV Shows.html">TV Shows</a></li>
+		  <li><a href="games and apps.html">Games & Apps</a></li>
+		  <li><a href="collections.html">Collections</a></li>
+		  <li><a href="feedback.html">Feedback</a></li>
+      </ul>
+
+    <div class="bx bx-menu" id="menu">
+	</div>
+	
+    
+
     <header>
     </header>
   </body>
