--- a/index.html
+++ b/index.html
@@ -1,28 +1,155 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title> Warner Bros Website</title>
-  </head>
-  <body>
-       <figure>
-      <img alt="logo" class="auto-style1" height="131" src="logo%20warner.jpeg" width="177" aglin="left"/>   
-     </figure>
 
-      <ul style="width: 162px">
-        <li><a href="index.html">Home</a></li>
-        <li>&nbsp;<a href="Movies.html">Movies</a></li>
-        <li><a href="TV Shows.html">TV Shows</a></li>
-		  <li><a href="games and apps.html">Games & Apps</a></li>
-		  <li><a href="collections.html">Collections</a></li>
-		  <li><a href="feedback.html">Feedback</a></li>
-      </ul>
+<head>
+    <meta charset="UTF-8">
+    <title>Warner Bros Website</title>
+    <link href="style.css" rel="stylesheet">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            color: gold; /* Text color set to gold */
+            overflow: hidden; /* Hide any overflowing video */
+        }
 
-    <div class="bx bx-menu" id="menu">
-	</div>
-	
-    
+        #bg-video {
+            position: fixed;
+            right: 0;
+            bottom: 0;
+            min-width: 100%;
+            min-height: 100%;
+            width: auto;
+            height: auto;
+            z-index: -1; /* Place the video behind other content */
+        }
+
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px;
+            position: relative; /* Ensure the header is above the video */
+            z-index: 1;
+        }
+
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+        }
+
+        nav li {
+            margin-right: 20px;
+        }
+
+        nav li:last-child {
+            margin-right: 0;
+        }
+
+        nav a {
+            text-decoration: none;
+            color: gold;
+            font-weight: bold;
+        }
+
+        .horizontal-container {
+            display: flex;
+            justify-content: space-around;
+            margin-top: 50px;
+            padding: 0 20px;
+        }
+
+        .image-container {
+            text-align: center;
+        }
+
+        .image-container img {
+            width: 234px;
+            height: 217px;
+            margin-bottom: 10px;
+        }
+
+        .button-container {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #333;
+            color: gold;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #555;
+        }
+    </style>
+    <script>
+        var clicked = false; // Variable to track if button is clicked
+
+        function nextImage() {
+            if (!clicked) { // Check if button is not already clicked
+                clicked = true; // Set clicked to true
+                window.location.href = "next_page.html"; // Redirect to next page
+            }
+        }
+    </script>
+</head>
+
+<body>
+    <!-- Background Video -->
+    <video id="bg-video" autoplay loop muted>
+        <source src="file:///C:/Users/Kelvin%20Chinaka/Desktop/New%20folder/jGRASP/WMD%20assignment/48569-454825064_small.mp4" type="video/mp4">
+        <!-- Add additional source elements for other video formats -->
+        Your browser does not support the video tag.
+    </video>
 
     <header>
+        <figure>
+            <a href="#top">
+                <img alt="logo" height="90" src="R.png" width="100">
+            </a>
+        </figure>
+
+        <nav>
+            <ul>
+                <li><a href="warner.html">Home</a></li>
+                <li><a href="Movies.html">Movies</a></li>
+                <li><a href="TV Shows.html">TV Shows</a></li>
+                <li><a href="games and apps.html">Games & Apps</a></li>
+                <li><a href="collections.html">Collections</a></li>
+                <li><a href="feedback.html">Feedback</a></li>
+            </ul>
+        </nav>
     </header>
-  </body>
+
+    <div class="horizontal-container">
+        <div class="image-container">
+            <img alt="jungle book" src="junglebook.jpeg">
+            <a href="https://youtu.be/WDmiIk3NBEw">Jungle Book 2</a>
+        </div>
+
+        <div class="image-container">
+            <img alt="forza" src="forza.jpeg">
+            <a href="https://youtu.be/U3mEOHvSUyw">Forza Horizon 5</a>
+        </div>
+
+        <div class="image-container">
+            <img alt="king kong" src="king%20kong.jpeg">
+            <a href="https://youtu.be/9jiUbfEtwcY">Godzilla X Kong</a>
+        </div>
+    </div>
+
+    <div class="button-container">
+        <button onclick="nextImage()">Next</button>
+    </div>
+</body>
+
 </html>
