--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Warner Bros Website</title>
-    <link href="style.css" rel="stylesheet">
     <style>
         body {
             margin: 0;
@@ -106,7 +105,7 @@
 <body>
     <!-- Background Video -->
     <video id="bg-video" autoplay loop muted>
-        <source src="file:///C:/Users/Kelvin%20Chinaka/Desktop/New%20folder/jGRASP/WMD%20assignment/48569-454825064_small.mp4" type="video/mp4">
+        <source src="48569-454825064_small.mp4" type="video/mp4">
         <!-- Add additional source elements for other video formats -->
         Your browser does not support the video tag.
     </video>
@@ -120,7 +119,7 @@
 
         <nav>
             <ul>
-                <li><a href="warner.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="Movies.html">Movies</a></li>
                 <li><a href="TV Shows.html">TV Shows</a></li>
                 <li><a href="games and apps.html">Games & Apps</a></li>
