--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Warner Bros Website</title>
+    <link rel="stylesheet" type="text/css" href="style.css"> 
     <style>
         body {
             margin: 0;
