--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
 
         <div class="image-container">
-            <img alt="forza" src="forza.jpeg">
+            <img alt="forza" src="froza.jpeg">
             <a href="https://youtu.be/U3mEOHvSUyw">Forza Horizon 5</a>
         </div>
 
