--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="Movies.html">Movies</a></li>
+                <li><a href="movies.html">Movies</a></li>
                 <li><a href="TV Shows.html">TV Shows</a></li>
                 <li><a href="games and apps.html">Games & Apps</a></li>
                 <li><a href="collections.html">Collections</a></li>
