--- a/movies.html
+++ b/movies.html
@@ -21,7 +21,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="Movies.html">movies</a></li>
+                <li><a href="movies.html">movies</a></li>
                 <li><a href="TV Shows.html">TV Shows</a></li>
                 <li><a href="games and apps.html">Games & Apps</a></li>
                 <li><a href="collections.html">Collections</a></li>
