--- a/movies.html
+++ b/movies.html
@@ -1,23 +1,23 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-<title>Movies</title>
-<link rel="stylesheet" type="text/css" href="style.css">
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+    <title>Movies</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
- 
+
 <body>
- <!-- Background Video -->
+    <!-- Background Video -->
     <video id="bg-video" autoplay loop muted>
         <source src="file:///C:/Users/Kelvin%20Chinaka/Desktop/New%20folder/jGRASP/WMD%20assignment/48569-454825064_small.mp4" type="video/mp4">
         <!-- Add additional source elements for other video formats -->
         Your browser does not support the video tag.
     </video>
 
- <header>
+    <header>
         <a href="#top">
-		<img alt="logo" height="90" src="R.png" width="100"></a>
+            <img alt="logo" height="90" src="R.png" width="100"></a>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -29,12 +29,37 @@
             </ul>
         </nav>
     </header>
-    
 
-
- <p><img alt="KingKong" height="234" src="king%20kong.jpeg" width="149" /><img alt="joker" height="234" src="joker.jpeg" width="149" /><img alt="kung" height="234" src="kung%20fu.jpeg" width="149" /><img alt="Bee" height="234" src="bee.jpeg" width="143" /><img alt="blue" height="234" src="blue.jpeg" width="149" /><img alt="equal" height="234" src="equal.jpeg" width="149" /><img height="234" src="expend.jpeg" width="149" /></p>
-    
-
+    <div class="image-grid">
+        <div class="image-item">
+            <img alt="KingKong" height="234" src="king%20kong.jpeg" width="149">
+            <div class="image-title">King Kong</div>
+        </div>
+        <div class="image-item">
+            <img alt="joker" height="234" src="joker.jpeg" width="149">
+            <div class="image-title">Joker</div>
+        </div>
+        <div class="image-item">
+            <img alt="kung" height="234" src="kung%20fu.jpeg" width="149">
+            <div class="image-title">Kung Fu Panda</div>
+        </div>
+        <div class="image-item">
+            <img alt="Bee" height="234" src="bee.jpeg" width="143">
+            <div class="image-title">Bee Movie</div>
+        </div>
+        <div class="image-item">
+            <img alt="blue" height="234" src="blue.jpeg" width="149">
+            <div class="image-title">Blue</div>
+        </div>
+        <div class="image-item">
+            <img alt="equal" height="234" src="equal.jpeg" width="149">
+            <div class="image-title">Equalizer</div>
+        </div>
+        <div class="image-item">
+            <img height="234" src="expend.jpeg" width="149">
+            <div class="image-title">Expendables</div>
+        </div>
+    </div>
 
 </body>
 
