--- a/movies.html
+++ b/movies.html
@@ -33,7 +33,7 @@
     <div class="image-grid">
         <div class="image-item">
             <img alt="KingKong" height="234" src="king%20kong.jpeg" width="149">
-            <div class="image-title">King Kong</div>
+            <div class="image-title">King-Kong vs Godzila</div>
         </div>
         <div class="image-item">
             <img alt="joker" height="234" src="joker.jpeg" width="149">
@@ -54,6 +54,14 @@
         <div class="image-item">
             <img alt="equal" height="234" src="equal.jpeg" width="149">
             <div class="image-title">Equalizer</div>
+        </div>
+         <div class="image-item">
+            <img alt="red-notice-banner.jpg" height="234" src="red-notice-banner.jpg" width="149">
+            <div class="image-title">Red Notice</div>
+         </div>
+         <div class="image-item">
+            <img alt="lift.jpeg" height="234" src="lift.jpeg" width="149">
+            <div class="image-title">Lift</div>
         </div>
         <div class="image-item">
             <img height="234" src="expend.jpeg" width="149">
