--- a/movies.html
+++ b/movies.html
@@ -45,11 +45,11 @@
         </div>
         <div class="image-item">
             <img alt="Bee" height="234" src="bee.jpeg" width="143">
-            <div class="image-title">Bee Movie</div>
+            <div class="image-title">BeeKeeper</div>
         </div>
         <div class="image-item">
             <img alt="blue" height="234" src="blue.jpeg" width="149">
-            <div class="image-title">Blue</div>
+            <div class="image-title">Blue-Bettle</div>
         </div>
         <div class="image-item">
             <img alt="equal" height="234" src="equal.jpeg" width="149">
@@ -65,7 +65,7 @@
         </div>
         <div class="image-item">
             <img height="234" src="expend.jpeg" width="149">
-            <div class="image-title">Expendables</div>
+            <div class="image-title">Expend4bles</div>
         </div>
     </div>
 
