--- a/movies.html
+++ b/movies.html
@@ -33,7 +33,7 @@
     <div class="image-grid">
         <div class="image-item">
             <img alt="KingKong" height="234" src="king%20kong.jpeg" width="149">
-            <div class="image-title">King-Kong vs Godzila</div>
+            <div class="image-title">King-Kong vs Godzilla</div>
         </div>
         <div class="image-item">
             <img alt="joker" height="234" src="joker.jpeg" width="149">
@@ -49,13 +49,13 @@
         </div>
         <div class="image-item">
             <img alt="blue" height="234" src="blue.jpeg" width="149">
-            <div class="image-title">Blue-Bettle</div>
+            <div class="image-title">Blue Beetle</div>
         </div>
         <div class="image-item">
             <img alt="equal" height="234" src="equal.jpeg" width="149">
             <div class="image-title">Equalizer</div>
         </div>
-         <div class="image-item">
+        <div class="image-item">
             <img alt="red-notice-banner.jpg" height="234" src="red-notice-banner.jpg" width="149">
             <div class="image-title">Red Notice</div>
          </div>
