--- a/movies.html
+++ b/movies.html
@@ -67,6 +67,14 @@
             <img height="234" src="expend.jpeg" width="149">
             <div class="image-title"><a href="https://lund2.nebula.to/0488ab6c504af2530c5397b12498a99dc751fb35.mp4?md5=4BM4_QyMUpvCPtRuwZwwbg&expires=1712937518">Expend4bles</a></div>
         </div>
+         <div class="image-item">
+            <img alt="Flash.jpg" height="234" src="Flash.jpg" width="149">
+            <div class="image-title"><a href="">The Flash</a></div>
+        </div>
+         <div class="image-item">
+            <img alt="jumanji.jpeg" height="234" src="jumanji.jpeg" width="149">
+            <div class="image-title"><a href="">The Jumanji</a></div>
+        </div>
     </div>
 
 </body>
