--- a/movies.html
+++ b/movies.html
@@ -75,6 +75,14 @@
             <img alt="jumanji.jpeg" height="234" src="jumanji.jpeg" width="149">
             <div class="image-title"><a href="https://motega2.nebula.to/2adc7672f0430bbc4011896efdf718f1808d266e.mp4?md5=p782TxU8Nl5qUNfP_THWxg&expires=1712940724">The Jumanji</a></div>
         </div>
+         <div class="image-item">
+            <img alt="meg.jpeg" height="234" src="meg.jpeg" width="149">
+            <div class="image-title"><a href="">The Meg 2</a></div>
+        </div>
+         <div class="image-item">
+            <img alt="vol 3.jpeg" height="234" src="vol 3.jpeg" width="149">
+            <div class="image-title"><a href="">Guardians of the Galaxy Vol. 3</a></div>
+        </div>
     </div>
 
 </body>
