--- a/movies.html
+++ b/movies.html
@@ -17,7 +17,7 @@
 
     <header>
         <a href="#top">
-            <img alt="logo" height="90" src="R.png" width="100"></a>
+            <img alt="Screenshot 2024-04-12 160015.png" height="90" src="Screenshot 2024-04-12 160015.png" width="100"></a>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
