--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header>
         <figure>
             <a href="#top">
-                <img alt="logo" height="90" src="R.png" width="100">
+                <img alt="logo" height="90" src="Screenshot 2024-04-12 160015.png" width="100">
             </a>
         </figure>
 
