--- a/movies.html
+++ b/movies.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Background Video -->
     <video id="bg-video" autoplay loop muted>
-        <source src="file:///C:/Users/Kelvin%20Chinaka/Desktop/New%20folder/jGRASP/WMD%20assignment/48569-454825064_small.mp4" type="video/mp4">
+        <source src="48569-454825064_small.mp4" type="video/mp4">
         <!-- Add additional source elements for other video formats -->
         Your browser does not support the video tag.
     </video>
