--- a/feedback.html
+++ b/feedback.html
@@ -16,7 +16,7 @@
     </video>
     <header>
         <a href="#top">
-		<img alt="logo" height="90" src="R.png" width="100"></a>
+		<img alt="logo" height="90" src="Screenshot 2024-04-12 160015.png" width="100">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
