--- a/feedback.html
+++ b/feedback.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
     <title>Feedback</title>
-   <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -16,7 +16,8 @@
     </video>
     <header>
         <a href="#top">
-		<img alt="logo" height="90" src="Screenshot 2024-04-12 160015.png" width="100">
+            <img alt="logo" height="90" src="Screenshot 2024-04-12 160015.png" width="100">
+        </a>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -29,7 +30,11 @@
         </nav>
     </header>
 
-    <textarea name="TextArea1" cols="20" rows="2"></textarea>
+    <textarea name="feedback" id="feedback" cols="30" rows="10" placeholder="Please leave your feedback here..."></textarea>
+
+    <script>
+        // JavaScript code can be added here for form validation or other functionality
+    </script>
 </body>
 
 </html>
