--- a/feedback.html
+++ b/feedback.html
@@ -43,6 +43,10 @@
         <input type="submit" value="Submit">
     </form>
 
+    <footer>
+        <p>&copy; 2024 Your Website. All rights reserved.</p>
+    </footer>
+
     <script>
         // JavaScript code can be added here for form submission handling or other functionality
     </script>
