--- a/feedback.html
+++ b/feedback.html
@@ -44,6 +44,13 @@
     </form>
 
     <footer>
+        <ul class="social-media-icons">
+            <li><a href="#"><img src="whatsapp.png" alt="WhatsApp"></a></li>
+            <li><a href="#"><img src="tiktok.png" alt="TikTok"></a></li>
+            <li><a href="#"><img src="twitter.png" alt="Twitter"></a></li>
+            <li><a href="#"><img src="instagram.png" alt="Instagram"></a></li>
+            <!-- Add more social media icons as needed -->
+        </ul>
         <p>&copy; 2024 Your Website. All rights reserved.</p>
     </footer>
 
