--- a/movies.html
+++ b/movies.html
@@ -86,7 +86,16 @@ But where do you go after Godzilla vs. Kong? Are the pair finally allies? Will K
             <div class="image-title"><a href="https://ibex.nebula.to/abcd5617d4d42511def7b439e65eab4e11be5d5a.mp4?md5=BACzyX1ulRqviQl7-NC_mw&expires=1712942880">Guardians of the Galaxy Vol. 3</a></div>
         </div>
     </div>
-
+ <footer>
+        <ul class="social-media-icons">
+            <li><a href="#"><img src="whatsapp.png" alt="WhatsApp"></a></li>
+            <li><a href="#"><img src="tiktok.png" alt="TikTok"></a></li>
+            <li><a href="#"><img src="twitter.png" alt="Twitter"></a></li>
+            <li><a href="#"><img src="instagram.png" alt="Instagram"></a></li>
+            <!-- Add more social media icons as needed -->
+        </ul>
+        <p>&copy; 2024 Your Website. All rights reserved.</p>
+    </footer>
 </body>
 
 </html>
