--- a/movies.html
+++ b/movies.html
@@ -88,10 +88,10 @@ But where do you go after Godzilla vs. Kong? Are the pair finally allies? Will K
     </div>
  <footer>
         <ul class="social-media-icons">
-            <li><a href="#"><img src="whatsapp.png" alt="WhatsApp"></a></li>
-            <li><a href="#"><img src="tiktok.png" alt="TikTok"></a></li>
-            <li><a href="#"><img src="twitter.png" alt="Twitter"></a></li>
-            <li><a href="#"><img src="instagram.png" alt="Instagram"></a></li>
+            <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
+            <li><a href="#"><img src="TIKTOK.JPEG" alt="TikTok"></a></li>
+            <li><a href="#"><img src="TWETTER.jpeg" alt="Twitter"></a></li>
+            <li><a href="#"><img src="IG.png" alt="Instagram"></a></li>
             <!-- Add more social media icons as needed -->
         </ul>
         <p>&copy; 2024 Your Website. All rights reserved.</p>
