--- a/movies.html
+++ b/movies.html
@@ -89,8 +89,8 @@ But where do you go after Godzilla vs. Kong? Are the pair finally allies? Will K
  <footer>
         <ul class="social-media-icons">
             <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
-            <li><a href="#"><img src="TIKTOK.JPEG" alt="TikTok"></a></li>
-            <li><a href="#"><img src="TWETTER.jpeg" alt="Twitter"></a></li>
+            <li><a href="#"><img src="TIKTOK.jpeg" alt="TikTok"></a></li>
+            <li><a href="#"><img src="TWITTER.jpeg" alt="Twitter"></a></li>
             <li><a href="#"><img src="IG.png" alt="Instagram"></a></li>
             <!-- Add more social media icons as needed -->
         </ul>
