--- a/movies.html
+++ b/movies.html
@@ -35,104 +35,10 @@
             <img alt="KingKong" height="234" src="king%20kong.jpeg" width="149">
             <div class="image-title">King-Kong vs Godzilla</div>
         </div>
-        <div class="image-item">
-            <img alt="joker" height="234" src="joker.jpeg" width="149">
-            <div class="image-title"><a href="It’s all coming up Titans. Legendary’s Monsterverse is a surprisingly successful take on the Toho kaiju creations of Japan. And Godzilla is seemingly more popular than ever before with a well-received TV show (Monarch: Legacy of Monsters) and Godzilla Minus One – Toho’s own addition to its mainline Godzilla series. But for Legendary, moving the Monsterverse forward is a priority, and the latest installment is the upcoming Godzilla x Kong: The New Empire.
-
-But where do you go after Godzilla vs. Kong? Are the pair finally allies? Will Kong leave his throne in the Hollow Earth long enough for a good fight? Will Toho’s Space Godzilla make an unlikely appearance? And what does it mean for this cinematic universe to continue when it changes out cast and characters on the regular? Let’s take a look at everything we know about the film to see if we can’t determine a surprise cameo and how the world might continue to expand.">Joker</a></div>
-        </div>
-        <div class="image-item">
-            <img alt="kung" height="234" src="kung%20fu.jpeg" width="149">
-            <div class="image-title"><a href="https://phuket.nebula.to/2e6d54db2c86abfa34519fb9dad0d8b631dcba33.mp4?md5=kKpHWqdno1myR3gueOLRJA&expires=1712938984">Kung Fu Panda</a></div>
-        </div>
-        <div class="image-item">
-            <img alt="Bee" height="234" src="bee.jpeg" width="143">
-            <div class="image-title"><a href="https://porto2.nebula.to/a2dd1d5c2c0622b8a6a18b1c1cb7f4abb4599877.mp4?md5=pLsYYChKYoDgdMFDKp8gWw&expires=1712938855">BeeKeeper</a></div>
-        </div>
-        <div class="image-item">
-            <img alt="blue" height="234" src="blue.jpeg" width="149">
-            <div class="image-title"><a href="https://oslo2.nebula.to/db2568ea7bae0f6020520aef246e16e8c8173f60.mp4?md5=XnRV9iCXs0TT8YYeWKMR-Q&expires=1712938568">Blue Beetle</a></div>
-        </div>
-        <div class="image-item">
-            <img alt="equal" height="234" src="equal.jpeg" width="149">
-            <div class="image-title"><a href="https://oslo2.nebula.to/d58d18c62c328a7c6314717ce02a194d175ce955.mp4?md5=hJan7-iZNA0vPqH-n-Hu_w&expires=1712938298">Equalizer 3 </a></div>
-        </div>
-        <div class="image-item">
-            <img alt="red-notice-banner.jpg" height="234" src="red-notice-banner.jpg" width="149">
-            <div class="image-title"><a href="https://lund2.nebula.to/ec25b2ce005bd81d832ee72d579c4d44b0a1f3f1.mp4?md5=XJRpssOjfcjbtsAC7pHMdA&expires=1712938019">Red Notice</a></div>
-         </div>
-         <div class="image-item">
-            <img alt="lift.jpeg" height="234" src="lift.jpeg" width="149">
-            <div class="image-title"><a href="https://phuket.nebula.to/c0bdc5e8e600d672d756400bf89cc560e3f6055d.mp4?md5=c2A8reafUfUDG_a8w3SByg&expires=1712937850">Lift</a></div>
-        </div>
-        <div class="image-item">
-            <img height="234" src="expend.jpeg" width="149">
-            <div class="image-title"><a href="https://lund2.nebula.to/0488ab6c504af2530c5397b12498a99dc751fb35.mp4?md5=4BM4_QyMUpvCPtRuwZwwbg&expires=1712937518">Expend4bles</a></div>
-        </div>
-         <div class="image-item">
-            <img alt="Flash.jpg" height="234" src="Flash.jpg" width="149">
-            <div class="image-title"><a href="https://johor.nebula.to/0f4a2d0c975bea09330ac535ff4e0decafa6c219.mp4?md5=PBsPTaLiMymBVUoVa2TB9g&expires=1712940257">The Flash</a></div>
-        </div>
-         <div class="image-item">
-            <img alt="jumanji.jpeg" height="234" src="jumanji.jpeg" width="149">
-            <div class="image-title"><a href="https://motega2.nebula.to/2adc7672f0430bbc4011896efdf718f1808d266e.mp4?md5=p782TxU8Nl5qUNfP_THWxg&expires=1712940724">The Jumanji</a></div>
-        </div>
-         <div class="image-item">
-            <img alt="meg.jpeg" height="234" src="meg.jpeg" width="149">
-            <div class="image-title"><a href="https://nara.nebula.to/360a8fd2c3287ddf01c4dea323345e308b4ea100.mp4?md5=9cOrolPIDWcFKr0fSlxbxw&expires=1712942727">The Meg 2</a></div>
-        </div>
-         <div class="image-item">
-            <img alt="vol 3.jpeg" height="234" src="vol 3.jpeg" width="149">
-            <div class="image-title"><a href="https://ibex.nebula.to/abcd5617d4d42511def7b439e65eab4e11be5d5a.mp4?md5=BACzyX1ulRqviQl7-NC_mw&expires=1712942880">Guardians of the Galaxy Vol. 3</a></div>
-        </div>
-         </div>
-         <div class="image-item">
-            <img alt="acti.jpeg" height="234" src="acti.jpeg" width="149">
-            <div class="image-title">The Mother</div>
-        </div>
-     <div class="image-item">
-            <img alt="dune.jpeg" height="234" src="dune.jpeg" width="149">
-            <div class="image-title">The Dune</div>
-        </div>
-     <div class="image-item">
-            <img alt="deadpool.jpeg" height="234" src="deadpool.jpeg" width="149">
-            <div class="image-title">The Deadpool</div>
-        </div>
-      <div class="image-item">
-            <img alt="dead.jpeg" height="234" src="dead.jpeg" width="149">
-            <div class="image-title">The Deadshot</div>
-        </div>
-    <div class="image-item">
-            <img alt="john.jpeg" height="234" src="john.jpeg" width="149">
-            <div class="image-title">The John Wick Chapter 4</div>
-        </div>
-    <div class="image-item">
-            <img alt="monkey.jpeg" height="234" src="monkey.jpeg" width="149">
-            <div class="image-title">The Monkey Man</div>
-        </div>
-    <div class="image-item">
-            <img alt="nun.jpeg" height="234" src="nun.jpeg" width="149">
-            <div class="image-title">The Nun II</div>
-        </div>
-    <div class="image-item">
-            <img alt="love.jpeg" height="234" src="love.jpeg" width="149">
-            <div class="image-title">Love and Love Not</div>
-        </div>
-    <div class="image-item">
-            <img alt="the boy.jpeg" height="234" src="the boy.jpeg" width="149">
-            <div class="image-title">The Boy Next Door</div>
-        </div>
-    <div class="image-item">
-            <img alt="sisu.jpeg" height="234" src="sisu.jpeg" width="149">
-            <div class="image-title">The Sisu</div>
-        </div>
-    <div class="image-item">
-            <img alt="romance.jpeg" height="234" src="romance.jpeg" width="149">
-            <div class="image-title">No Hard Feelings</div>
-        </div>
+        <!-- Add more image items like the one above for each additional image -->
     </div>
-    
- <footer>
+
+    <footer>
         <ul class="social-media-icons">
             <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
             <li><a href="#"><img src="TIKTOK.jpeg" alt="TikTok"></a></li>
