--- a/movies.html
+++ b/movies.html
@@ -37,9 +37,7 @@
         </div>
         <div class="image-item">
             <img alt="joker" height="234" src="joker.jpeg" width="149">
-            <div class="image-title"><a href="It’s all coming up Titans. Legendary’s Monsterverse is a surprisingly successful take on the Toho kaiju creations of Japan. And Godzilla is seemingly more popular than ever before with a well-received TV show (Monarch: Legacy of Monsters) and Godzilla Minus One – Toho’s own addition to its mainline Godzilla series. But for Legendary, moving the Monsterverse forward is a priority, and the latest installment is the upcoming Godzilla x Kong: The New Empire.
-
-But where do you go after Godzilla vs. Kong? Are the pair finally allies? Will Kong leave his throne in the Hollow Earth long enough for a good fight? Will Toho’s Space Godzilla make an unlikely appearance? And what does it mean for this cinematic universe to continue when it changes out cast and characters on the regular? Let’s take a look at everything we know about the film to see if we can’t determine a surprise cameo and how the world might continue to expand.">Joker</a></div>
+            <div class="image-title">The Joker</div>
         </div>
         <div class="image-item">
             <img alt="kung" height="234" src="kung%20fu.jpeg" width="149">
