--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="movies.html">Movies</a></li>
                 <li><a href="TV Shows.html">TV Shows</a></li>
-                <li><a href="games and apps.html">Games & Apps</a></li>
+                <li><a href="GAME&APPS">Games & Apps</a></li>
                 <li><a href="collections.html">Collections</a></li>
                 <li><a href="feedback.html">Feedback</a></li>
             </ul>
