--- a/index.html
+++ b/index.html
@@ -39,18 +39,54 @@
 
     <div class="horizontal-container">
         <div class="image-container">
-            <img alt="jungle book" src="junglebook.jpeg">
+            <img alt="junglebook" height="234" src="junglebook.jpeg" width="149">
             <a href="https://youtu.be/WDmiIk3NBEw">Jungle Book 2</a>
         </div>
 
         <div class="image-container">
-            <img alt="forza" src="froza.jpeg">
+            <img alt="froza.jpeg" height="234" src="froza.jpeg" width="149">
             <a href="https://youtu.be/U3mEOHvSUyw">Forza Horizon 5</a>
         </div>
 
         <div class="image-container">
-            <img alt="king kong" src="king%20kong.jpeg">
+             <img alt="king kong.jpeg" height="234" src="king kong.jpeg" width="149">
             <a href="https://youtu.be/9jiUbfEtwcY">Godzilla X Kong</a>
+        </div>
+         <div class="image-container">
+             <img alt="call of duty.jpeg" height="234" src="call of duty.jpeg" width="149">
+        </div>
+         <div class="image-container">
+             <img alt="expend.jpeg" height="234" src="expend.jpeg" width="149">
+        </div>
+         <div class="image-container">
+             <img alt="anime.jpeg" height="234" src="anime.jpeg" width="149">
+        </div>
+         <div class="image-container">
+             <img alt="TIKTOK.jpeg" height="234" src="TIKTOK.jpeg" width="149">
+        </div>
+         <div class="image-container">
+             <img alt="TWITTER.jpeg" height="234" src="TWITTER.jpeg" width="149">
+        </div>
+         <div class="image-container">
+             <img alt="dune.jpeg" height="234" src="dune.jpeg" width="149">
+        </div>
+         <div class="image-container">
+             <img alt="fifa-22.jpeg" height="234" src="fifa-22.jpeg" width="149">
+        </div>
+         <div class="image-container">
+             <img alt="twilight.jpeg" height="234" src="twilight.jpeg" width="149">
+        </div>
+         <div class="image-container">
+             <img alt="call of duty.jpeg" height="234" src="call of duty.jpeg" width="149">
+        </div>
+         <div class="image-container">
+             <img alt="show.jpg" height="234" src="show.jpg" width="149">
+        </div>
+         <div class="image-container">
+             <img alt="spotify.png" height="234" src="spotify.png" width="149">
+        </div>
+         <div class="image-container">
+             <img alt="game.jpeg" height="234" src="game.jpeg" width="149">
         </div>
     </div>
 
