--- a/index.html
+++ b/index.html
@@ -53,9 +53,6 @@
             <a href="https://youtu.be/9jiUbfEtwcY">Godzilla X Kong</a>
         </div>
          <div class="image-container">
-             <img alt="call of duty.jpeg" height="234" src="call of duty.jpeg" width="149">
-        </div>
-         <div class="image-container">
              <img alt="expend.jpeg" height="234" src="expend.jpeg" width="149">
         </div>
          <div class="image-container">
@@ -71,7 +68,7 @@
              <img alt="dune.jpeg" height="234" src="dune.jpeg" width="149">
         </div>
          <div class="image-container">
-             <img alt="fifa-22.jpeg" height="234" src="fifa-22.jpeg" width="149">
+             <img alt="fifa-22-new-gameplay.jpg" height="234" src="fifa-22.jpeg" width="149">
         </div>
          <div class="image-container">
              <img alt="twilight.jpeg" height="234" src="twilight.jpeg" width="149">
