--- a/index.html
+++ b/index.html
@@ -54,33 +54,42 @@
         </div>
          <div class="image-container">
              <img alt="expend.jpeg" height="234" src="expend.jpeg" width="149">
+              <a href="https://youtu.be/9jiUbfEtwcY">Expend4bles</a>
         </div>
          <div class="image-container">
              <img alt="anime.jpeg" height="234" src="anime.jpeg" width="149">
+              <a href="https://youtu.be/9jiUbfEtwcY">Anime</a>
         </div>
          <div class="image-container">
              <img alt="TIKTOK.jpeg" height="234" src="TIKTOK.jpeg" width="149">
+              <a href="https://youtu.be/9jiUbfEtwcY">TikTok</a>
         </div>
          <div class="image-container">
              <img alt="TWITTER.jpeg" height="234" src="TWITTER.jpeg" width="149">
+              <a href="https://youtu.be/9jiUbfEtwcY">Twitter</a>
         </div>
          <div class="image-container">
              <img alt="dune.jpeg" height="234" src="dune.jpeg" width="149">
+              <a href="https://youtu.be/9jiUbfEtwcY">The Dune</a>
         </div>
          <div class="image-container">
              <img alt="fifa-22-new-gameplay.jpg" height="234" src="fifa-22.jpeg" width="149">
+              <a href="https://youtu.be/9jiUbfEtwcY">Fifa 22</a>
         </div>
          <div class="image-container">
              <img alt="twilight.jpeg" height="234" src="twilight.jpeg" width="149">
+              <a href="https://youtu.be/9jiUbfEtwcY">Twilight</a>
         </div>
          <div class="image-container">
              <img alt="call of duty.jpeg" height="234" src="call of duty.jpeg" width="149">
+              <a href="https://youtu.be/9jiUbfEtwcY">Call Of Duty</a>
         </div>
          <div class="image-container">
              <img alt="show.jpg" height="234" src="show.jpg" width="149">
         </div>
          <div class="image-container">
              <img alt="spotify.png" height="234" src="spotify.png" width="149">
+              <a href="https://youtu.be/9jiUbfEtwcY">Spotify</a>
         </div>
          <div class="image-container">
              <img alt="game.jpeg" height="234" src="game.jpeg" width="149">
