--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <a href="https://youtu.be/9jiUbfEtwcY">The Dune</a>
         </div>
          <div class="image-container">
-             <img alt="fifa-22-new-gameplay.jpg" height="234" src="fifa-22.jpeg" width="149">
+             <img alt="fifa22.jpeg" height="234" src="fifa22.jpeg" width="149">
               <a href="https://youtu.be/9jiUbfEtwcY">Fifa 22</a>
         </div>
          <div class="image-container">
