--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <a href="https://youtu.be/9jiUbfEtwcY">Fifa 22</a>
         </div>
          <div class="image-container">
-             <img alt="twilight.jpeg" height="234" src="twilight.jpeg" width="149">
+             <img alt="twilght.jpeg" height="234" src="twilght.jpeg" width="149">
               <a href="https://youtu.be/9jiUbfEtwcY">Twilight</a>
         </div>
          <div class="image-container">
