--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
          <div class="image-container">
              <img alt="game.jpeg" height="234" src="game.jpeg" width="149">
         </div>
+         <div class="image-container">
+             <img alt="whATSP.png" height="234" src="whATSP.png" width="149">
     </div>
 
     <div class="button-container">
