--- a/movies.html
+++ b/movies.html
@@ -15,6 +15,21 @@
         .image-item {
             margin-bottom: 20px; /* Add some space between items */
         }
+
+        .image-title {
+            text-align: center;
+            margin-top: 5px;
+            transition: color 0.3s;
+        }
+
+        .image-title a {
+            color: black;
+            text-decoration: none;
+        }
+
+        .image-title a:hover {
+            color: blue;
+        }
     </style>
 </head>
 
