--- a/movies.html
+++ b/movies.html
@@ -27,9 +27,11 @@
             text-decoration: none;
         }
 
-        .image-title a:hover {
-            color: blue;
         }
+
+.image-item:hover .image-title {
+    opacity: 1;
+}
     </style>
 </head>
 
