--- a/movies.html
+++ b/movies.html
@@ -32,6 +32,9 @@
 .image-item:hover .image-title {
     opacity: 1;
 }
+.image-item:hover img {
+    transform: scale(1.1);
+}
     </style>
 </head>
 
