--- a/movies.html
+++ b/movies.html
@@ -48,7 +48,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="movies.html">Movies</a></li>
                 <li><a href="TV Shows.html">TV Shows</a></li>
-                <li><a href="games and apps.html">Games & Apps</a></li>
+                <li><a href="Games&APPS">Games & Apps</a></li>
                 <li><a href="collections.html">Collections</a></li>
                 <li><a href="feedback.html">Feedback</a></li>
             </ul>
