--- a/games & apps.html
+++ b/games & apps.html
@@ -25,7 +25,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Movies.html">Movies</a></li>
                 <li><a href="TV Shows.html">TV Shows</a></li>
-                <li><a href="Games&APPS">Games & Apps</a></li>
+                <li><a href="games & apps.html">Games & Apps</a></li>
                 <li><a href="collections.html">Collections</a></li>
                 <li><a href="feedback.html">Feedback</a></li>
             </ul>
