--- a/index.html
+++ b/index.html
@@ -4,18 +4,66 @@
 <head>
     <meta charset="UTF-8">
     <title>Warner Bros Website</title>
-     <link rel="stylesheet" type="text/css" href="style.css">
-    <script>
-        var clicked = false; // Variable to track if button is clicked
-
-        function nextImage() {
-            if (!clicked) { // Check if button is not already clicked
-                clicked = true; // Set clicked to true
-                window.location.href = "next_page.html"; // Redirect to next page
-            }
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <style>
+        /* Styling for search bar */
+        .search-container {
+            text-align: center;
+            margin-top: 20px;
         }
-    </script>
-    
+
+        .search-container input[type="text"] {
+            padding: 8px;
+            width: 300px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+        }
+
+        .search-container button {
+            padding: 8px 15px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        /* Styling for footer */
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+        }
+
+        /* Styling for navigation bar */
+        nav ul {
+            margin: 0;
+            padding: 0;
+            list-style: none;
+            text-align: center;
+        }
+
+        nav ul li {
+            display: inline;
+            margin-right: 20px;
+        }
+
+        nav ul li a {
+            color: #333;
+            text-decoration: none;
+            font-weight: bold;
+            font-size: 18px;
+            transition: color 0.3s;
+        }
+
+        nav ul li a:hover {
+            color: #007bff;
+        }
+    </style>
 </head>
 
 <body>
@@ -38,10 +86,23 @@
         </nav>
     </header>
 
+    <!-- Search Bar -->
+    <div class="search-container">
+        <form action="/search" method="GET">
+            <input type="text" name="q" placeholder="Search...">
+            <button type="submit">Search</button>
+        </form>
+    </div>
 
+    <!-- Button Container -->
     <div class="button-container">
         <button onclick="nextImage()">Next</button>
     </div>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 Warner Bros. All Rights Reserved.</p>
+    </footer>
 </body>
 
 </html>
